--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="dni_30154846">DNI: 30154846</string>
     <string name="nombre_juan">Nombre: Juan</string>
     <string name="apellido_perez">Apellido: Perez</string>
-    <string name="e_mail_correo_gmail_com">E-mail: correo@gmail.com</string>
+    <string name="e_mail_correo_gmail_com">E-mail: user@correo.com</string>
     <string name="desde">Desde:</string>
     <string name="listar_vencimientos">Listar Vencimientos</string>
     <string name="hasta">Hasta:</string>
