--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="lbl_Login">Login</string>
     <string name="login">Login</string>
     <string name="cobrar_cuota">Cobrar Cuota</string>
-    <string name="nro_de_socio_3510">Nro. de Socio: 3510</string>
-    <string name="dni_35082464">DNI: 35082464</string>
+    <string name="nro_de_socio_3510">Nro. de Socio:</string>
+    <string name="dni_35082464">DNI:</string>
     <string name="nombre_mariela">Nombre: Mariela</string>
     <string name="apellido_laureat">Apellido: Laureat</string>
     <string name="monto">Monto</string>
@@ -13,20 +13,20 @@
     <string name="zumba">Zumba</string>
     <string name="mouint_65000">65000</string>
     <string name="musculaci_n">Musculación</string>
-    <string name="total_210000">Total: 210000</string>
+    <string name="total_210000">Total:</string>
     <string name="mount_80000">80000</string>
     <string name="forma_de_pago">Forma de Pago:</string>
     <string name="cuota">Cuota:</string>
     <string name="pagar">Pagar</string>
     <string name="cancelar">Cancelar</string>
     <string name="factura">Factura</string>
-    <string name="forma_de_pago_tarjeta_de_credito">Forma de Pago: Tarjeta de Credito</string>
-    <string name="cuotas_3">Cuotas: 3</string>
+    <string name="forma_de_pago_tarjeta_de_credito">Forma de Pago:</string>
+    <string name="cuotas_3">Cuotas:</string>
     <string name="imprimir">Imprimir</string>
-    <string name="nro_socio_3467">Nro. Socio: 3467</string>
-    <string name="dni_30154846">DNI: 30154846</string>
-    <string name="nombre_juan">Nombre: Juan</string>
-    <string name="apellido_perez">Apellido: Perez</string>
+    <string name="nro_socio_3467">Nro. Socio:</string>
+    <string name="dni_30154846">DNI:</string>
+    <string name="nombre_juan">Nombre:</string>
+    <string name="apellido_perez">Apellido:</string>
     <string name="e_mail_correo_gmail_com">E-mail: user@correo.com</string>
     <string name="desde">Desde:</string>
     <string name="listar_vencimientos">Listar Vencimientos</string>
@@ -61,7 +61,7 @@
     <string name="socio">Socio</string>
     <string name="limpiar">Limpiar</string>
     <string name="aceptar">Aceptar</string>
-    <string name="dni_3015486">DNI: 3015486</string>
+    <string name="dni_3015486">DNI:</string>
     <string name="imprimir_carnet_ask">Imprimir Carnet?</string>
     <string name="si">SI</string>
     <string name="no">NO</string>
